deploy/mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  namespace: mongo-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: mongodb
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: mongodb
    spec:
      containers:
        - image: quay.io/jduimovich0/mongoserver:2023-03-03-134139
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /
              port: 27017
            initialDelaySeconds: 10
            periodSeconds: 10
          name: container-image
          ports:
            - containerPort: 27017
          resources:
            requests:
              cpu: 10m
              memory: 512Mi
