deploy/pacman-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pacman
  namespace: mongo-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: pacman
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: pacman
    spec:
      containers:
        - image: quay.io/jduimovich0/pacman:2023-03-02-233142
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
          name: pacman-image
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 10m
              memory: 512Mi
