deploy/mongo-service.yaml
apiVersion: v1
kind: Service
metadata:  
  name: mongodb
  namespace: mongo-test
spec:
  ports:
  - port: 27017
    targetPort: 27017 
  selector:
    app.kubernetes.io/instance: mongodb
