deploy/pacman-service.yaml
apiVersion: v1
kind: Service
metadata: 
  labels:   
    app.kubernetes.io/instance: pacman 
  name: pacman
  namespace: mongo-test
spec:
  ports:
  - port: 8080
    targetPort: 8080 
  selector:
      app.kubernetes.io/instance: pacman
