deploy/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata: 
  name: pacman
  namespace: mongo-test
spec:
  port:
    targetPort: 8080
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: pacman
    weight: 100
